# car_tracking

./: .gitignore  README.md  flow_chart_symbols.drawio
amazon_certs/mobile_certs/: private.key
cloud_app/: aws_lambda_function.py
cloud_app/database_connection_api/: pom.xml
embedded_app/: CMakeLists.txt
embedded_app/MORO_LIBS/MORO_COMMON/: CMakeLists.txt  Kconfig.projbuild
embedded_app/MORO_LIBS/MORO_COMMON/include/: MORO_COMMON.h
embedded_app/MORO_LIBS/MORO_COMMON/src/: MORO_COMMON.c  MORO_COMMON.cpp
embedded_app/MORO_LIBS/MORO_MQTT/: CMakeLists.txt
embedded_app/MORO_LIBS/MORO_SIM800L/: CMakeLists.txt
embedded_app/MORO_LIBS/MORO_SIM800L/include/: MORO_SIM800L.h
embedded_app/MORO_LIBS/MORO_SIM800L/src/: MORO_SIM800L.c  MORO_SIM800L.cpp
embedded_app/MORO_LIBS/MORO_WEBSERVER/: CMakeLists.txt
embedded_app/MORO_LIBS/MORO_WEBSERVER/include/: MORO_WEBSERVER.h
embedded_app/MORO_LIBS/MORO_WEBSERVER/src/: MORO_WEBSERVER.cpp
embedded_app/application/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
embedded_app/application/main/: CMakeLists.txt  main.c  main.cpp  mqtt_configurations.json
embedded_app/docs/: README.md  car_trackin_embedded.drawio
embedded_app/libs/MoRo_Common/: CMakeLists.txt
embedded_app/main/: CMakeLists.txt
embedded_app/test/: mqtt_broker.py
mobile_app/: .flutter-plugins  .flutter-plugins-dependencies  README.md  main.dart  pubspec.yaml
mobile_app/.dart_tool/: package_config.json  package_config_subset
mobile_app/android/app/: build.gradle
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: google_maps_widget.dart  main.dart  map_manager.dart  mqtt_manager.dart  mqtt_wiewer_state.dart
mobile_app/linux/: CMakeLists.txt  my_application.cc
mobile_app/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/test/: widget_test.dart
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
mobile_app/windows/runner/: Runner.rc  main.cpp
web_app/: README.md
web_app/DeneyKonsolu/: DeneyKonsolu.csproj  Program.cs
web_app/MVC/: MVC.csproj
web_app/NLayer.API/: NLayer.API.http
web_app/NLayer.Core/Data/: MqttOptionsData.cs
web_app/NLayer.Core/Models/: MqttMessageModel.cs
web_app/NLayer.Repository/: NLayer.Repository.csproj
web_app/TrackingSystem/: TrackingSystem.sln
web_app/TrackingSystem/Service/: Service.csproj
web_app/TrackingSystem/TrackingSystemAPI/: Program.cs
web_app/VehicleTrackingSystem/: VehicleTrackingSystem.sln
web_app/docs/: ProjectDiagram.drawio
(+103 files in other folders)
